# golubegram-core

./: .gitignore  Cargo.toml  README.md  SECURITY.md  sbom.json
.cargo/: config.toml
.github/workflows/: omni_release.yml
benches/: crypto_throughput.rs
clients/android/: MainActivity.kt
clients/desktop/: package-lock.json  package.json
clients/ios/: ContentView.swift
docs/: CANARY.md  ZERO_PATIENT.md
docs/tactical/: TACTICAL_WHITEPAPER.md
releases/genesis/: golubegram_genesis_arm64.apk  golubegram_genesis_linux.run
releases/infection_payload/: golubegram_genesis_arm64.apk
releases/v1.0.0-PROD/: Golubegram-macOS.dmg  Golubegram-x86_64.AppImage  Golubegram-x86_64.msix  Golubegram.AppImage  Golubegram.dmg  Golubegram.msix  Golubegram_ZeroPatient.ppkg  golubegram-enterprise.ipa  golubegram-mesh-daemon  golubegram-release.apk  golubegram.apk  golubegram.ipa  mac_enterprise.mobileconfig
reports/: coverage.xml
scripts/: generate_gold_master.ps1  mac_enterprise.mobileconfig  windows_enterprise.xml
src/: lib.rs
src/ai/: agi_scraper.rs  inference.rs  mod.rs  swarm_compute.rs  swarm_manager.rs
src/billing/: mod.rs  proof_of_work.rs
src/commerce/: hybrid_p2p.rs  mod.rs
src/crypto/: hardware.rs  hidden.rs  identity.rs  mod.rs  pow.rs  (+2 more)
tests/: chaos_battery.rs  chaos_faraday.rs  chaos_mesh.rs  crash_suite.rs  crypto_fuzz.rs  e2e_ui.rs  hellfire_emp.rs  idiot_savant.rs  insider_threat.rs  macro_topology.rs  mesh_stress.rs  paranoia_ble_overflow.rs  paranoia_matryoshka.rs  paranoia_memory_leak.rs  pentagon_load.rs  power_profile.rs  red_team.rs
(+58 files in other folders)
